# elucidate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml
assets/grammar/: JSON.md
src/: lib.rs  parser.rs
src/parser/: json.rs  util.rs
