[package]
name = "elucidate"
version = "0.1.0"
edition = "2021"
authors = ["Peter Donovan <peter@darkfusion.io>"]
description = "High-performance JSON parsing for safety-critical systems."
repository = "https://github.com/dark-fusion/elucidate"
readme = "README.md"
license = "MIT"
keywords = ["json", "parser", "secure"]
categories = ["parsing"]

[dependencies]
nom = "7.1.1"

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.dev]
# Disabling debug info speeds up build times during development.
# Comment out the following line to re-enable debug info.
debug = 0

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
lto = true
